# cs248-path-tracer

./: CMakeLists.txt
src/: PathIntegrator.cpp  PathIntegrator.h  constants.h  main.cpp  types.h  util.cpp  util.h
src/examples/: TestScene1.cpp  TestScenes.cpp  TestScenes.h
src/geometry/: Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/lights/: AreaLight.cpp  AreaLight.h  LightSource.cpp  LightSource.h  PointLight.cpp  PointLight.h
src/material/: BSDF.cpp  BSDF.h  Diffuse.cpp  Diffuse.h  Fresnel.cpp  Fresnel.h  Material.cpp  Material.h  Specular.cpp  Specular.h  Transparent.cpp  Transparent.h
src/render/: PathIntegrator.cpp  PathIntegrator.h  Renderer.cpp  Renderer.h
src/scene/: Bvh.cpp  Bvh.h  Camera.cpp  Camera.h  Scene.cpp  Scene.h
